Add s3 frontend to nginx conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream connectfour {
 
 server {
   listen 80;
-  server_name connectfour.rossta.me;
+  server_name connectfour-api.rossta.me;
 
   location / {
     proxy_pass http://connectfour;
@@ -15,5 +15,23 @@ server {
     proxy_set_header X-Forwarded-Host $server_name;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
+  }
+}
+
+server {
+  listen 80;
+  server_name connectfour.rossta.me;
+
+  location / {
+    proxy_set_header Host 'rossta-connect-four.s3-website-us-west-2.amazonaws.com';
+    proxy_set_header Authorization '';
+    proxy_hide_header x-amz-id-2;
+    proxy_hide_header x-amz-request-id;
+    proxy_hide_header Set-Cookie;
+    proxy_ignore_headers "Set-Cookie";
+    proxy_intercept_errors on;
+    proxy_pass http://rossta-connect-four.s3-website-us-west-2.amazonaws.com
+    # expires 1y;
+    log_not_found off;
   }
 }
